# cmd/cultivo-api-go/main.go
@@ -10,17 +10,27 @@ import (
 	"syscall"
 	"time"
 
-	"github.com/gin-gonic/gin"
 	"github.com/joho/godotenv"
 	"gitea.paulojamil.dev.br/paulojamil.dev.br/cultivo-api-go/internal/config"
-	"gitea.paulojamil.dev.br/paulojamil.dev.br/cultivo-api-go/internal/infrastructure/repository"
-	"gitea.paulojamil.dev.br/paulojamil.dev.br/cultivo-api-go/internal/domain/service"
-	"gitea.paulojamil.dev.br/paulojamil.dev.br/cultivo-api-go/internal/handler"
-	"gitea.paulojamil.dev.br/paulojamil.dev.br/cultivo-api-go/internal/router"
-	"gitea.paulojamil.dev.br/paulojamil.dev.br/cultivo-api-go/internal/middleware"
+	"gitea.paulojamil.dev.br/paulojamil.dev.br/cultivo-api-go/internal/infrastructure/database"
+	"gitea.paulojamil.dev.br/paulojamil.dev.br/cultivo-api-go/internal/infrastructure/server"
 	"github.com/sirupsen/logrus"
 )
 
+// @title Cultivo API
+// @version 1.0
+// @description This is the API for the Cultivo app.
+// @termsOfService http://swagger.io/terms/
+
+// @contact.name API Support
+// @contact.url http://www.swagger.io/support
+// @contact.email support@swagger.io
+
+// @license.name Apache 2.0
+// @license.url http://www.apache.org/licenses/LICENSE-2.0.html
+
+// @host localhost:8080
+// @BasePath /api/v1
 func main() {
 	// Carrega as variáveis de ambiente do arquivo .env
 	if err := godotenv.Load(); err != nil {
@@ -28,56 +38,19 @@ func main() {
 	}
 
 	cfg := config.LoadConfig()
-	
 
-	db, err := config.ConnectDatabase(cfg)
+	db, err := database.NewDatabase(cfg)
 	if err != nil {
 		logrus.Fatalf("Falha ao conectar ao banco de dados: %v", err)
 	}
 
-	
-
-	// =========================================================================
-	// Injeção de Dependências (DI)
-	// =========================================================================
-	// Construímos nossas dependências da camada mais interna para a mais externa:
-	// Database -> Repositório -> Serviço -> Handler
-	diarioRepo := repository.NewDiarioCultivoRepository(db)
-	diarioService := service.NewDiarioCultivoService(diarioRepo)
-	diarioHandler := handler.NewDiarioCultivoHandler(diarioService)
-
 	// Setup do Router
-	r := gin.New()
-	r.Use(gin.Recovery())
-	// Usando o middleware de log customizado que já formata para Logrus
-	r.Use(middleware.LoggerMiddleware())
-
-	// Rota pública de health check
-	r.GET("/health", func(c *gin.Context) {
-		c.JSON(http.StatusOK, gin.H{"status": "UP"})
-	})
-
-	// Grupo de rotas da API v1
-	apiV1 := r.Group("/api/v1")
-	{
-		// Rotas públicas dentro da API
-		// TODO: Adicionar rotas de autenticação (login, registro) aqui
-
-		// Grupo de rotas que exigem autenticação
-		authorized := apiV1.Group("/")
-		
-		{
-			// As rotas de diário de cultivo são registradas aqui, dentro do grupo protegido.
-			router.RegisterDiarioCultivoRoutes(authorized, diarioHandler)
-
-			// Futuras rotas protegidas (ex: plantas, ambientes) serão registradas aqui.
-		}
-	}
+	servidor := server.NewServer(db)
 
 	// Graceful Shutdown
 	srv := &http.Server{
 		Addr:    fmt.Sprintf(":%s", cfg.ServerPort),
-		Handler: r,
+		Handler: servidor.Router,
 	}
 
 	go func() {
